# thesmallestyesodapp.com

./: .ghci  .gitmodules  Dockerfile  Makefile  Procfile  README.md  deploy.sh  package.json  site.hs  smallest.cabal
.halcyon/: constraints
lib/: libc.so.6  libgmp.so.10
