name:          smallest
version:       0.0.1
license:       GPL
author:        Patrick Brisbin
maintainer:    Patrick Brisbin
synopsis:      Smallest yesod site ever
description:   Smallets yesod site ever
category:      Web
stability:     Experimental
cabal-version: >= 1.6
build-type:    Simple
homepage:      http://thesmallestyesodapp.com

executable site
  main-is:       site.hs

  extensions:    QuasiQuotes
                 TypeFamilies
                 TemplateHaskell
                 MultiParamTypeClasses
                 OverloadedStrings

  build-depends: base              >= 4   && < 5
               , yesod             >= 1.2 && < 1.3
               , highlighting-kate >= 0.5 && < 0.6
               , blaze-markup      >= 0.5 && < 0.7
               , warp              >= 1.3 && < 3.0

source-repository head
  type:     git
  location: git://github.com/pbrisbin/thesmallestyesodapp.com
