name:          smallest
version:       0.0.1
license:       GPL
author:        Patrick Brisbin
maintainer:    Patrick Brisbin
synopsis:      Smallest yesod site ever
description:   Smallest yesod site ever
category:      Web
stability:     Experimental
cabal-version: >= 1.6
build-type:    Simple
homepage:      http://thesmallestyesodapp.com

executable site
  main-is:       site.hs
  ghc-options:   -threaded -rtsopts -with-rtsopts=-N

  extensions:    QuasiQuotes
                 TypeFamilies
                 TemplateHaskell
                 MultiParamTypeClasses
                 OverloadedStrings

  build-depends: base >= 4 && < 5
               , blaze-markup
               , bytestring
               , file-embed
               , highlighting-kate
               , warp
               , yesod

source-repository head
  type:     git
  location: git://github.com/pbrisbin/thesmallestyesodapp.com
